--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-navigation": "^2.13.0"
