--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "printWidth": 80,
+    "trailingComma": "all"
   }
 }
